[package]
name = "async-hotstuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
futures = { version = "0.3", features = ["async-await"]}
parking_lot = "0.12.1"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
tokio = {version = "1.21.2", features = ["full"]}
