[package]
name = "jasmine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
bincode = "1.3.3"
bytes = { version = "1.2.1"}
clap = {version="4.0.24", features = ["derive"]}
config = "0.13.2"
futures = { version = "0.3", features = ["async-await"]}
parking_lot = {version = "0.12.1"}
serde = {version = "1.0.147", features = ["derive"]}
serde-big-array = "0.4.1"
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = {version = "1.21.2", features = ["full"]}
tokio-util = {version = "0.7.4", features=["codec"]}
tracing = "0.1.37"
tracing-subscriber =  { version = "0.3.16", features = ["fmt"] }
